getting closer to running this